Update wishlist to show release dates with color-coded status

--- a/app/templates/wishlist.html
+++ b/app/templates/wishlist.html
@@ -55,7 +55,7 @@
                             <th width="80" class="has-text-centered p-1">{{ t('Capa') }}</th>
                             <th>{{ t('Título') }}</th>
                             <th width="140">{{ t('Adicionado em') }}</th>
-                            <th width="140">{{ t('Status') }}</th>
+                            <th width="140">{{ t('Data de Lançamento') }}</th>
                             <th class="has-text-right">{{ t('Ações') }}</th>
                         </tr>
                     </thead>
