feat: add redundant filter and improve error reporting in library and settings

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -101,6 +101,11 @@
                         <span class="icon is-small"><i class="bi bi-plus-circle"></i></span>
                         <span class="is-hidden-mobile ml-1">DLC</span>
                     </button>
+                    <button class="button is-small is-light" id="btnFilterRedundant"
+                        title="{{ t('Arquivos Redundantes') }}">
+                        <span class="icon is-small"><i class="bi bi-layers-half"></i></span>
+                        <span class="is-hidden-mobile ml-1">Redundante</span>
+                    </button>
                 </div>
 
                 <button id="clearFiltersBtn" class="button is-small is-outlined is-danger" onclick="clearFilters()"
